--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run prisma:generate && SKIP_ENV_VALIDATION=true npm run build",
+  "buildCommand": "npm run build",
   "installCommand": "npm install"
 }
 
